add screenshot to readme

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+![Alt text](/SCREENSHOT?raw=true "cxx-run media")
+
 usage: cxx-run [option]
 	-h, --help		: displays this page
 	-u, --use-config	: use custom config
