--- a/README
+++ b/README
@@ -4,6 +4,6 @@ usage: cxx-run [option]
 	-v, --version		: print version
 
 aur: https://aur.archlinux.org/packages/cxx-run
-git: https://github.com/3llena-arch/cxx-run
+git: https://github.com/3llena/cxx-run
 
-t. 3llena-arch <3llena-arch@protonmail.com>
+t. 3llena-arch <3llena@protonmail.com>
