contact info again

--- a/README
+++ b/README
@@ -6,4 +6,4 @@ usage: cxx-run [option]
 aur: https://aur.archlinux.org/packages/cxx-run
 git: https://github.com/3llena/cxx-run
 
-t. 3llena-arch <3llena@protonmail.com>
+t. 3llena <3llena@protonmail.com>
